--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-cf-workers",
+  "name": "tsatu-redirector",
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230307.0",
